# NinjaPlatformer

./: CMakeLists.txt  Makefile  NinjaPlatformer.code-workspace  README.md
.cache/clangd/index/: Block.cpp.BCA41B9E6BC8EAB5.idx  Block.hpp.DE35A3B23FC0B7E3.idx  Button.cpp.9B762B781B5BBBC6.idx  Button.hpp.A4FE3A6D77257A65.idx  Enemy.cpp.9E2768F6324EBBBE.idx  Enemy.hpp.6212322AA1C59EC6.idx  Entity.cpp.4C612898B5EFA6A0.idx  Entity.hpp.0E3CFCFBEFC9C4F1.idx  Game.cpp.633213EB3A3ADAA0.idx  Game.hpp.2C9DE57B8094A0A4.idx  Hud.cpp.5EEDD575D8719AD0.idx  Hud.hpp.4C24ED227D4B57BC.idx  InputManager.cpp.6AAF5EA8FA3F59C7.idx  InputManager.hpp.EE7D1D2DA4F6772D.idx  Main.cpp.CD53FD8459BB4803.idx  Menu.cpp.F54A1CE351D27933.idx  Menu.hpp.151C2952CEDCFA0A.idx  NPC.cpp.9888046D74740B8D.idx  NPC.hpp.C3E0C0CF99705E10.idx  Player.cpp.431F7682D41BDEA1.idx  Player.hpp.4EC4460D69C8F460.idx  tinyxml2.cpp.8358E066D1343255.idx  (+1 more)
NinjaPlatformer-2/: README.md
NinjaPlatformer-2/src/: Button.cpp  Entity.cpp  Game.cpp  Menu.cpp  Player.cpp
include/: Game.hpp  Player.hpp
resources/: NinjaLevelOne.tmx  cavesofgallet.tsx  cavesofgalletmine.tsx  controls.xml
resources/Levels/: NinjaLevelOne.tmx  cavesofgallet.tsx  cavesofgalletmine.tsx
src/: Background.cpp  Block.cpp  Button.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Hud.cpp  InputManager.cpp  Main.cpp  Menu.cpp  NPC.cpp  Player.cpp  Projectile.cpp  Sound.cpp  tinyxml2.cpp
src/headers/: Background.hpp  Block.hpp  Button.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Hud.hpp  InputManager.hpp  Menu.hpp  NPC.hpp  Player.hpp  Projectile.hpp  Sound.hpp
(+24 files in other folders)
